cabal-version: 3.0
name:          plutarch-test
version:       1.2.0

common c
  default-language:   Haskell2010
  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    FunctionalDependencies
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PatternSynonyms
    PolyKinds
    PostfixOperators
    QuantifiedConstraints
    RankNTypes
    RelaxedPolyRec
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilyDependencies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  ghc-options:
    -Weverything -Wno-unused-do-bind -Wno-missing-kind-signatures
    -Wno-partial-type-signatures -Werror -Wno-implicit-prelude
    -Wno-name-shadowing -Wno-unsafe -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures -Wno-prepositive-qualified-module
    -Wno-missing-import-lists -Wno-monomorphism-restriction
    -Wno-all-missed-specializations -Wno-unrecognised-warning-flags
    -fprint-equality-relations -fprint-explicit-kinds
    -fprint-explicit-coercions -fprint-explicit-foralls

library
  import:          c
  hs-source-dirs:  .
  exposed-modules:
    Plutarch.Test
    Plutarch.Test.Benchmark
    Plutarch.Test.Golden
    Plutarch.Test.ListSyntax
    Plutarch.Test.Property
    Plutarch.Test.Property.Extra
    Plutarch.Test.Property.Gen
    Plutarch.Test.Property.HaskEquiv
    Plutarch.Test.Property.Marshal
    Plutarch.Test.Run

  build-depends:
    , aeson                 >=2.0
    , base
    , bytestring
    , containers
    , data-default
    , directory
    , filepath
    , hedgehog
    , hspec
    , hspec-core
    , hspec-golden
    , mtl
    , plutarch
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , quickcheck-instances
    , serialise
    , sop-core
    , tasty-hunit
    , tasty-quickcheck
    , text

executable plutarch-test
  import:         c
  main-is:        Main.hs
  hs-source-dirs: tests
  build-depends:
    , base
    , base16-bytestring
    , bytestring
    , cborg
    , data-default
    , hedgehog
    , hspec
    , hspec-hedgehog
    , plutarch
    , plutarch-extra
    , plutarch-test
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , quickcheck-instances
    , serialise
    , sop-core
    , tasty-hunit
    , tasty-quickcheck
    , text
    , transformers

  other-modules:
    Plutarch.ApiSpec
    Plutarch.BoolSpec
    Plutarch.ByteStringSpec
    Plutarch.EitherSpec
    Plutarch.Extra.ApiSpec
    Plutarch.Extra.ByteStringSpec
    Plutarch.Extra.IntervalSpec
    Plutarch.Extra.ListSpec
    Plutarch.Extra.MaybeSpec
    Plutarch.Extra.OrdSpec
    Plutarch.FieldSpec
    Plutarch.IntegerSpec
    Plutarch.LiftSpec
    Plutarch.ListSpec
    Plutarch.MaybeSpec
    Plutarch.MonadicSpec
    Plutarch.PairSpec
    Plutarch.PIsDataSpec
    Plutarch.PLamSpec
    Plutarch.PlutusTypeSpec
    Plutarch.POrdSpec
    Plutarch.RationalSpec
    Plutarch.RecursionSpec
    Plutarch.ScriptsSpec
    Plutarch.ShowSpec
    Plutarch.SpecTypes
    Plutarch.StringSpec
    Plutarch.TraceSpec
    Plutarch.TryFromSpec
    Plutarch.UnitSpec
    Plutarch.UPLCSpec
    Spec

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
