cabal-version: 3.0
name:          plutarch-test
version:       1.2.0

common c
  default-language:   GHC2021
  default-extensions:
    BlockArguments
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DisambiguateRecordFields
    DuplicateRecordFields
    FunctionalDependencies
    GADTs
    ImpredicativeTypes
    LambdaCase
    LexicalNegation
    LiberalTypeSynonyms
    MonadComprehensions
    MultiWayIf
    NegativeLiterals
    NoFlexibleInstances
    NoMonomorphismRestriction
    NoStarIsType
    NondecreasingIndentation
    NumDecimals
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    PatternSynonyms
    QualifiedDo
    QuantifiedConstraints
    QuasiQuotes
    RankNTypes
    RecordWildCards
    RecursiveDo
    RoleAnnotations
    TypeFamilies
    TypeFamilyDependencies
    UnicodeSyntax
    UnliftedFFITypes
    UnliftedNewtypes
    ViewPatterns

  ghc-options:
    -Weverything -Wno-unused-do-bind -Wno-missing-kind-signatures
    -Wno-partial-type-signatures -Werror -Wno-implicit-prelude
    -Wno-name-shadowing -Wno-unsafe -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures -Wno-prepositive-qualified-module
    -Wno-missing-import-lists -Wno-monomorphism-restriction
    -Wno-all-missed-specializations -Wno-unrecognised-warning-flags
    -Wno-unrecognised-pragmas -Wno-unticked-promoted-constructors
    -Wno-operator-whitespace -fprint-equality-relations
    -fprint-explicit-kinds -fprint-explicit-foralls
    -Wno-missing-export-lists

library
  import:          c
  hs-source-dirs:  .
  exposed-modules:
    Plutarch.Test
    Plutarch.Test.Benchmark
    Plutarch.Test.Golden
    Plutarch.Test.ListSyntax
    Plutarch.Test.Property
    Plutarch.Test.Property.Extra
    Plutarch.Test.Property.Gen
    Plutarch.Test.Property.HaskEquiv
    Plutarch.Test.Property.Marshal
    Plutarch.Test.Run

  build-depends:
    , aeson                 >=2.0
    , base
    , bytestring
    , containers
    , data-default
    , directory
    , filepath
    , hedgehog
    , hspec
    , hspec-core
    , hspec-golden
    , mtl
    , plutarch
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , quickcheck-instances
    , sop-core
    , tasty-hunit
    , tasty-quickcheck
    , text

executable plutarch-test
  import:             c
  main-is:            Main.hs
  hs-source-dirs:     tests
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
    , base
    , base16-bytestring
    , bytestring
    , hedgehog
    , hspec
    , hspec-hedgehog
    , plutarch
    , plutarch-extra
    , plutarch-test
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , quickcheck-instances
    , serialise
    , sop-core
    , tasty-hunit
    , tasty-quickcheck
    , text
    , transformers

  other-modules:
    Plutarch.ApiSpec
    Plutarch.BoolSpec
    Plutarch.ByteStringSpec
    Plutarch.EitherSpec
    Plutarch.Extra.ApiSpec
    Plutarch.Extra.ByteStringSpec
    Plutarch.Extra.IntervalSpec
    Plutarch.Extra.ListSpec
    Plutarch.Extra.MaybeSpec
    Plutarch.Extra.RationalDataSpec
    Plutarch.FieldSpec
    Plutarch.IntegerSpec
    Plutarch.LiftSpec
    Plutarch.ListSpec
    Plutarch.MaybeSpec
    Plutarch.MonadicSpec
    Plutarch.PairSpec
    Plutarch.PIsDataSpec
    Plutarch.PLamSpec
    Plutarch.PlutusTypeSpec
    Plutarch.POrdSpec
    Plutarch.RationalSpec
    Plutarch.RecursionSpec
    Plutarch.ScriptsSpec
    Plutarch.ShowSpec
    Plutarch.SpecTypes
    Plutarch.StringSpec
    Plutarch.TraceSpec
    Plutarch.TryFromSpec
    Plutarch.UnitSpec
    Plutarch.UPLCSpec
    Spec

  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
