cabal-version:      3.0
name:               plutarch-trace
version:            1.0.0

author: Las Safin <me@las.rs>, Chase <chase@mlabs.city>
license: MIT

extra-source-files: README.md

common c
  default-language: Haskell2010
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    LambdaCase
    TypeFamilies
    OverloadedStrings
    PartialTypeSignatures
    -- poor man's GHC2021
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StarIsType
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wno-partial-type-signatures
    -Wmissing-export-lists -Werror -Wincomplete-record-updates
    -Wmissing-deriving-strategies -Wno-name-shadowing

library
  import: c
  hs-source-dirs: src
  signatures:
    Plutarch.TraceSig
  exposed-modules:
    Plutarch.Trace
  build-depends:
    , base
    , plutarch

library enable
  import: c
  hs-source-dirs:
    impl
  visibility:
    public
  exposed-modules:
    Plutarch.Trace.Enable
  build-depends:
    , base
    , plutarch
    , plutus-core

library disable
  import: c
  hs-source-dirs:
    impl
  visibility:
    public
  exposed-modules:
    Plutarch.Trace.Disable
  build-depends:
    , base
    , plutarch
